--- a/static/public/index.html
+++ b/static/public/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Fiber Boilerplate</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css"
+		/>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiber Boilerplate</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
-</head>
+	<body>
+		<div class="container">
+			<div class="text-center">
+				<img src="/img/logo.svg" class="img-fluid" width="300px" />
+			</div>
+			<h4>Add user</h4>
+			<form class="input-group mb-3">
+				<input
+					type="text"
+					class="form-control"
+					placeholder="Username"
+					id="user"
+				/>
+				<div class="input-group-append">
+					<button class="btn btn-outline-secondary" type="submit" id="add_user">
+						Add User
+					</button>
+				</div>
+			</form>
+			<h4>Users</h4>
+			<ul class="list-group" id="users"></ul>
+		</div>
 
-<body>
-  <div class="container">
-    <div class="text-center">
-      <img src="/img/logo.svg" class="img-fluid" width="300px">
-    </div>
-    <h4>Add user</h4>
-    <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Username" id="user">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="add_user">Add User</button>
-      </div>
-    </div>
-    <h4>Users</h4>
-    <ul class="list-group" id="users">
-
-    </ul>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script src="/js/app.js"></script>
-</body>
-
+		<script src="/js/app.js"></script>
+	</body>
 </html>
