--- a/static/public/index.html
+++ b/static/public/index.html
@@ -4,10 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Fiber Boilerplate</title>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css"
-		/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet"></link>
 	</head>
 
 	<body>
@@ -24,7 +22,7 @@
 					id="user"
 				/>
 				<div class="input-group-append">
-					<button class="btn btn-outline-secondary" type="submit" id="add_user">
+					<button class="btn btn-outline-primary" type="submit" id="add_user">
 						Add User
 					</button>
 				</div>
