--- a/static/private/404.html
+++ b/static/private/404.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Fiber Boilerplate</title>
+		<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.min.js "></script>
+        <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css " rel="stylesheet"></link>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 Not Found</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-</head>
-
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="error-template">
-          <h1>Oops!</h1>
-          <h2>404 Not Found</h2>
-          <p>
-            Sorry, an error has occured, Requested page not found!
-          </p>
+	</head>
+    <body>
+      <div class="container">
+        <div class="text-center">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="error-template">
+                  <h1>Oops!</h1>
+                  <h2>404 Not Found</h2>
+                  <p>
+                    Sorry, an error has occured, Requested page not found!
+                  </p>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
-    </div>
-  </div>
-
-</body>
-
+    </body>
 </html>
